--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   background-color: #505050;
+  color: #FBFAFA;
 }
 
 *,
@@ -19,7 +20,7 @@ html {
   box-sizing: border-box;
 }
 
-/* Header Bar with Links */
+/* Header Bar with Nav */
 .nav-bar {
   display: flex;
   align-items: center;
@@ -31,8 +32,8 @@ html {
 
 .menu {
   display: flex;
-  width: 50%;
-  justify-content: space-around;
+  width: 40%;
+  justify-content: space-evenly;
 }
 
 .list {
@@ -40,32 +41,78 @@ html {
   padding: 0 1em;
 }
 
-li a {
+.link {
   color: #C7C6C6;
   text-decoration: none;
   transition: 0.4s ease;
+  font-size: 1rem;
 }
 
-li a:hover {
+.link:hover {
   color: #FBFAFA;
+}
 
+.social-container {
+  display: none;
+}
+
+.social-menu {
+  display: flex;
+  
+}
+
+.social-list {
+  list-style: none;
+  padding: 0 1em;
+}
+
+.social-link {
+  color: #C7C6C6;
+  text-decoration: none;
+  transition: 0.4s ease;
+  font-size: 0.8rem;
 }
 
 /* Header */
-.main-header {
-  margin-top: 0.5em;
-  font-size: 5rem;
-  color: #FBFAFA;
-  letter-spacing: 3px;
-  font-weight: 100;
+.header-container {
   text-align: center;
 }
 
+.main-header {
+  font-size: 5rem;
+  letter-spacing: 3px;
+  font-weight: 100;
+  padding-top: 0.8em;
+}
+
+.sub-header {
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  font-weight: 400;
+  padding: 1em;
+}
+
+.about {
+  width: 50%;
+  height: auto;
+  margin: 8em auto 0 auto;
+}
+
+.about-text {
+  text-align: center;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 1.5em;
+}
 
 
 @media only screen and (max-width: 460px) {
-  .main-header {
+  .header-container {
     margin-top: 1em;
+  }
+
+  .main-header {
     font-size: 3rem;
   }
 }
