--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
   justify-content: center;
   width: 100%;
   height: 4rem;
-  background-color: #111111;
+  background-color: #000000;
   position: fixed;
   top: 0;
 }
@@ -54,7 +54,8 @@ html {
 }
 
 .background-image {
-  background-image: url(https://www.wallpapertip.com/wmimgs/83-838362_web-developer.jpg);
+  background-image: url(https://mistertech.co.za/wp-content/uploads/2021/04/IMG_6307-2048x1365.jpg);
+  /*background-image: url(https://www.wallpapertip.com/wmimgs/83-838362_web-developer.jpg);*/
   background-size: cover;
   background-attachment: fixed;
 }
@@ -68,6 +69,19 @@ html {
   width: 100%;
   height: 100vh;
   background-color: #000000;
+}
+
+/* ---------- Social Links ----------*/
+.github-link {
+  position: fixed;
+  top: 100px;
+  left: 95%;
+}
+
+.linkedIn-link {
+  position: fixed;
+  top: 150px;
+  left: 95.2%;
 }
 
 /* ---------- Header ---------- */
@@ -88,13 +102,13 @@ html {
   letter-spacing: 1px;
   font-weight: 400;
   text-shadow: 2px 2px 5px #000;
-  padding: 1em;
+  padding-top: 1.5em;
 }
 
 .about {
   width: 50%;
   height: auto;
-  margin: 8em auto 0 auto;
+  margin: 8em auto 0 auto
 }
 
 /* ---------- About Paragraph ---------- */
@@ -102,7 +116,7 @@ html {
   text-align: center;
   font-size: 1rem;
   letter-spacing: 1px;
-  font-weight: 600;
+  font-weight: 400;
   text-shadow: 2px 2px 5px #000;
   line-height: 1.5em;
 }
@@ -149,7 +163,7 @@ html {
 .footer-container {
   width: 100%;
   height: 50px;
-  background-color: #111111;
+  background-color: #000000;
 }
 
 
