--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
   box-sizing: border-box;
 }
 
-/* Header Bar with Nav */
+/* ----- Header Bar with Nav ----- */
 .nav-bar {
   display: flex;
   align-items: center;
@@ -60,7 +60,7 @@ html {
   background-attachment: fixed;
 }
 
-/* ---------- Containers ----------*/
+/* ----- Containers -----*/
 .container-1 {
   height: 100vh;
 }
@@ -71,7 +71,7 @@ html {
   background-color: #000000;
 }
 
-/* ---------- Social Links ----------*/
+/* ----- Social Links -----*/
 .github-link {
   position: fixed;
   top: 100px;
@@ -84,7 +84,13 @@ html {
   left: 95.2%;
 }
 
-/* ---------- Header ---------- */
+.twitter-link {
+  position: fixed;
+  top: 195px;
+  left: 95%;
+}
+
+/* ----- Header ----- */
 .header-container {
   text-align: center;
 }
@@ -111,7 +117,7 @@ html {
   margin: 8em auto 0 auto
 }
 
-/* ---------- About Paragraph ---------- */
+/* ----- About Paragraph ----- */
 .about p {
   text-align: center;
   font-size: 1rem;
@@ -121,7 +127,7 @@ html {
   line-height: 1.5em;
 }
 
-/* ---------- Projects Section ---------- */
+/* ----- Projects Section ----- */
 .section-title-projects {
   text-align: center;
   width: 100%;
@@ -129,15 +135,15 @@ html {
 }
 
 .section-title-projects h3 {
-  font-size: 3rem;
-  font-weight: 400;
-  letter-spacing: 2px;
-  text-shadow: 2px 2px 5px #000;
+  font-size: 5rem;
+  font-weight: 100;
+  letter-spacing: 3px;
   color: #b6b6b6;
+  padding-top: 1em;
 }
 
 .projects {
-  display: flex;
+  text-align: center;
   width: 100%;
   height: auto;
   justify-content: space-evenly;
@@ -145,20 +151,46 @@ html {
   padding-bottom: 2em;
 }
 
-.projects-box {
-  width: 25%;
-  height: 400px;
-  background-color: #111111;
-  border-radius: 2.5rem;
-  transition: all 0.5s ease;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0);
+
+
+.cryptospot-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 12em;
+  padding-top: 5em;
 }
 
-.projects-box:hover {
-  transform: scale(1.1);
-  border-radius: 2.5rem;
-  background-color: #444444;
+.cryptospot-container h3 {
+  
 }
+
+.cryptospot-container img {
+  width: 500px;
+  border-radius: 20px;
+  transition: 0.8s ease;
+}
+
+.cryptospot-container img:hover {
+  transform: scale(1.2);
+  box-shadow: 0 0 30px #b6b6b6;
+}
+
+
+
+
+.projects h3 {
+  font-size: 4rem;
+  font-weight: 100;
+  letter-spacing: 2px;
+  color: #b6b6b6;
+  margin: auto 0;
+}
+
+
+
+
 
 .footer-container {
   width: 100%;
